moved code from draft into actual

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Weather Stuff Aye</title>
+    <title>Drum Pad</title>
     <script src='/bundle.js'></script>
     <link rel="stylesheet" href="styles/main.css">
-<link href="https://fonts.googleapis.com/css?family=Courgette|Nunito|Oleo+Script&display=swap" rel="stylesheet">
   </head>
   <body>
-    <img id = "background"src="/images/sky.jpeg">
-    <div id='header'>
-      <h1 id="header" id="link">NZ Weather</h1>
-      <img id = "sun"src="images/sun.png" alt="">
-      <img id="cloud" src="images/cloud.png" alt="">
-    </div>
-    <section id="allthestuff">
-      <div id='options'>
-        <form action="change-city" method="post">
-          <label for="city">Choose a City:</label>
-          <br>
-          <select name="city" id="city">
-            <option value="wellington">Wellington</option>
-            <option value="auckland">Auckland</option>
-            <option value="christchurch">Christchurch</option>
-          </select>
-          <br>
-          <input type="submit" id="submit">
-        </form>
-      </div>
-      <div id='display'>
-        <div id="info"></div>
-      </div>
-    </section>
-    
-    
+    <button class="sound" id="basskick">Basskick (0)</button>
+    <button class="sound" id="kick">Kick (1)</button>
+    <button class="sound" id="snare">Snare (2)</button>
+    <br>
+    <button class="sound" id="clap">Clap (3)</button>
+    <button class="sound" id="snap">snap (4)</button>
+    <button class="sound" id="cowbell">Cowbell (5)</button>
+    <br>
+    <button class="sound" id="crash">Crash (6)</button>
+    <button class="sound" id="hat">Hat (7)</button>
+    <button class="sound" id="softhat">Soft Hat (8)</button>
+    <br>
+    <button class="sound" id="coconut">Coconut (9)</button>
+    <br>
+    <button id="record">Record</button>
+    <br>
+    <a href="https://soundpacks.com/free-sound-packs/bryson-tiller-drum-kit/">Bryson Tiller Drum Kit (Free Download) - SoundPacks.com</a>
+    <br>
+    <a href="https://soundpacks.com/free-sound-packs/lo-fi-hip-hop-drum-kit/">Lo-Fi Hip-Hop Drum Kit (Free Download) - SoundPacks.com</a>
   </body>
 </html>
 
