restructured playback function

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -21,6 +21,7 @@
     <button class="sound" id="coconut">Coconut (9)</button>
     <br>
     <button id="record">Record</button>
+    <button id="play">Play</button>
     <br>
     <a href="https://soundpacks.com/free-sound-packs/bryson-tiller-drum-kit/">Bryson Tiller Drum Kit (Free Download) - SoundPacks.com</a>
     <br>
