--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,107 @@
+/* 
+colors:
+
+#303841
+#3a4750
+#d72323
+#eeeeee
+
+*/
+
+
 body {
-    background-color: cornflowerblue;
+    background-color: #303841;
+    
+}
+
+/* Header */
+
+header {
+    position: fixed;
+    width: 95vw;
+    top: 0;
+    left: 0;
+}
+
+#main-title {
+    color: #eeeeee;
+    font-family: 'Chelsea Market', cursive;
+    font-size: 5vw;
+    float: left;
+    margin-left: 10vw;
+    margin-top: 3vw;
+}
+
+#controls {
+    float: right;
+}
+
+#sound-pad {
+    width: 60vw;
+    margin-left: 20vw;
+    margin-top: 25vh;
+}
+
+/* Footer */
+
+footer {
+    position: fixed;
+    width: 95vw;
+    left: 1vw;
+    bottom: 1vw;
+    font-family: 'Chelsea Market', cursive;
+    color: #3a4750;
+}
+
+footer > p {
+    float: left;
+    margin: 0;
+    font-size: 1.5vw;
+}
+
+#sound-links {
+    float: right;
+}
+
+a {
+    text-decoration: none;
+    color: #3a4750;
+    font-size: 1vw;
+}
+
+
+
+a:hover {
+    color: #eeeeee;
+    transition: ease-in-out .25s;
+}
+
+
+/* Buttons */
+
+.round {
+    font-family: 'Chelsea Market', cursive;
+    font-size: 1.5vw;
+    width: 9.5vw;
+    height: 9.5vw;
+    margin-right: 1vw;
+    margin-left: 1vw;
+    margin-top: 3vw;
+    border-radius: 50%;
+    color: #303841;
+    background-color: #d72323;
+    border: none;
+    box-shadow: 0px 0px .5vw #eeeeee;
+}
+
+.round:hover {
+    background-color: #e00303;
+    color: #eeeeee;
+    transition: ease-in-out .15s;
+    box-shadow: 0px .3vw .5vw #eeeeee;
+}
+
+.round:active {
+    box-shadow: 0px 0px .5vw #eeeeee;
+    background-color: #d72323;
 }
