fixed recording loop problem

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -36,6 +36,12 @@ header {
     float: right;
 }
 
+#controls > button {
+    background-color: #3a4750;
+    color: #eeeeee; 
+}
+
+
 #sound-pad {
     width: 60vw;
     margin-left: 20vw;
