reworked db to only hold one beat, added clear beat function

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -11,8 +11,9 @@
     <header>
       <h1 id="main-title">Beat Pad</h1>
       <div id="controls">
-        <button id="record" class="round">Record</button>
-        <button id="play" class="round">Play</button>
+        <button id="clear" class="round">Clear Recording</button>
+        <button id="record" class="round">Record Audio</button>
+        <button id="play" class="round">Playback Audio</button>
       </div>
     </header>
     <div id="sound-pad">
