--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -12,7 +12,7 @@
       <h1 id="main-title">Beat Pad</h1>
       <div id="controls">
         <button id="clear" class="round">Clear Recording</button>
-        <button id="record" class="round">Record Audio</button>
+        <button id="record" class="round">Record<span></span></button>
         <button id="play" class="round">Playback Audio</button>
       </div>
     </header>
