changed name ticker to metronome

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -41,7 +41,7 @@
           <option value="300"></option>
         </datalist>
       </div>
-      <button id="ticker" class="round control">Ticker</button>
+      <button id="ticker" class="round control">Metronome</button>
     </div>
     
     <footer>
