--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -12,7 +12,13 @@
       <h1 id="main-title">Beat Pad</h1>
       <div id="controls">
         <button id="clear" class="round control">Clear Recording</button>
-        <button id="record" class="round control">Record<span></span></button>
+        <button id="record" class="round control">
+          <span>
+            <div id="inner-record">
+              <p>Record</p>
+            </div>
+          </span>
+        </button>
         <button id="play" class="round control">Playback Audio</button>
       </div>
     </header>
