readjusted styles on record button

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -37,7 +37,7 @@
 
     <div id="ticker-box">
       <div id = "slider-box">
-        <input type="range" id="slider" list="bpms" min="50", max="300", step="50">
+        <input type="range" id="slider" list="bpms" min="50", max="400", step="50">
         <datalist id="bpms">
           <option value="50"></option>
           <option value="100"></option>
@@ -45,6 +45,8 @@
           <option value="200"></option>
           <option value="250"></option>
           <option value="300"></option>
+          <option value="350"></option>
+          <option value="400"></option>
         </datalist>
       </div>
       <button id="ticker" class="round control">Metronome</button>
