--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -143,6 +143,7 @@ span {
     background-color: #3a4750;
     margin: auto;
     vertical-align: middle;
+    box-shadow: 0px 0px .3vw #3a4750;
 }
 
 #inner-record > p {
@@ -157,6 +158,7 @@ span {
     position: fixed;
     bottom: 5vw;
     right: 3vw;
+    z-index: -1;
 }
 
 #slider-box {
